   * updated translations: Catalan, Czech, German
 * miscellaneous
   * reordered macro calls in game.cfg to fix no-AMLA bug for campaigns
   * {abilities.cfg} call moved from utils.cfg to game.cfg for consistency
   * Send message on player ban or kick
   * Show a message when a player leaves a game.
   * WML-generated units with "random_traits" now show the traits description
 * graphics
   * new attack icons: animal fangs, axe, battle axe, faery touch, fireball, hammer, hatchet, lightbeam, magic missile, necromatic staff, magic staff, spear

Version 1.1.1:
 * campaigns
   * reordered ranks to reflect relevance to game world
   * new (beginner) campaign: Two Brothers
   * Heir to the Throne
     * Gryphons are not available until you find dwarves to ride them
     * Fixed behavior of sleeping gryphons in Gryphon Mountain
     * Changed confusing dialog on Home of the North Elves (#5006)
     * Standardized wording for bonus victory objectives
     * Lost General map now slightly more friendly to smallfoot units
     * Sceptre of Fire - more villages and dirt road near starting castle
     * Underground scenarios generally more interesting/enhanced story
     * Text cleanups
   * The Rise of Wesnoth
     * replaced Sea Orc with Naga Fighter in Final Spring, Clearwater Port, and
       Rise of Wesnoth
     * Fire dragon is a level 5 unit
     * Text cleanups
   * migrated unique units, scenarios, maps, and images to data/campaigns
 * campaign server
   * changed default port for campaign server to 15003 to separate 1.1 and 1.0
 * gameplay changes:
   * improved default weapon selection on player attack (patch #500)
   * attack_weight=0 disables the attack when attacking
   * defense_weight=0 disables the attack when defending
   * attack_weight is now functional (#5014)
   * added a new terrain "Mushroom Grove" (id=fungus)
   * changed several terrains to be "mixed", having worst movement and best